--- a/.env.txt
+++ b/.env.txt
@@ -1,4 +1,4 @@
 PORT = 8000
-JWT_SECRET = "secret"
-JWT_TOKEN_EXP = "1h"
+JWT_SECRET = "capstone-secret"
+JWT_TOKEN_EXP = "5h"
 MONGO_DB_URL = "YOUR MONGODB URL"
